--- a/index.html
+++ b/index.html
@@ -55,30 +55,31 @@
             </p>
         </section>
     </section>
-    
-    <div class="benefits">
-        <div class="benefit-lead">
+
+    <aside class="benefits"> <!-- change div to aside for simantic element-->
+        <section class="benefit-lead"><!-- remove div and added sections within the aside element-->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="" /><!-- add alt="" blank because no need for description of image-->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand"><!-- remove div and added sections within the aside element-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="" /><!-- add alt="" blank because no need for description of image-->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost"><!-- remove div and added sections within the aside element-->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="" /><!-- add alt="" blank because no need for description of image-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
+    </aside>
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
